--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <header>
       <h1>My Personal Information</h1>
-      <img src="lokajaya.jpeg" alt="Lokajaya Andala">
+      <img src="img/lokajaya.jpeg" alt="Lokajaya Andala">
       <p>Lokajaya Andala</p>
     </header>
    
