--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"type="text/css" href="style.css">
-  </head>
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
+</head>
   <body>
     <nav>
         <div class="nav-container">
